<resources>
    <string name="app_name">ホーム画面</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ユーザ情報</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main">Main Activity</string>
    <string name="sub">Sub Activity</string>
    <string name="rescheduling_button">日時変更</string>
    <string name="message">message</string>
    <string name="change_complete">変更確定</string>


    <string name="time_change_name">日時変更画面</string>
    <string name="courier_detail_name">配達員側詳細画面</string>
    <string name="courier_Home_Activity">配達員側ホーム画面</string>
    <string name="customer_Home_Activity">消費者側ホーム画面</string>
    <string name="delivery_complete">配達完了</string>

    <string name="juusho">【住所】</string>
    <string name="haitatu">【配達希望日時】</string>
    <string name="denpyou">【伝票番号】</string>
    <string name="slip_number">伝票番号</string>
    <string name="address">住所</string>
    <string name="time">配達希望日時</string>
    <string name="name">宛名</string>
    <string name="textview">TextView</string>
    <string name="atena">【宛名】</string>
    <string name="dialog">配達日</string>
    <string name="change_confirm">変更確定</string>
    <string name="delivery_date">配達希望日時</string>



    <!-- Strings related to login -->
    <string name="prompt_id">ID</string>
    <string name="prompt_email">メールアドレス</string>
    <string name="prompt_password">パスワード</string>
    <string name="action_sign_in">ログイン</string>
    <string name="action_create_account">アカウント作成</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This id is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."</string>

    <!-- NewAccountActivity -->
    <string name="create_account_name">アカウント作成</string>
    <string name="user_name">名前</string>
    <string name="mail">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="re_password">パスワード再入力</string>
    <string name="tel">電話番号</string>
    <string name="title_activity_login2">Sign in</string>

    <string-array name="time_list">
        <item>時間指定なし</item>
        <item>9時〜12時</item>
        <item>12時〜15時</item>
        <item>15時〜18時</item>
        <item>18時〜21時</item>
    </string-array>


    <string name="dlg_btn">配達完了</string>
    <string name="dlg_title">確認</string>
    <string name="dlg_msg1">配達が完了しましたか？</string>
    <string name="dlg_msg2">変更が完了しましたか？</string>
    <string name="dlg_msg3">荷物を受領できませんか？</string>
    <string name="dlg_msg4">荷物を受領できますか？</string>

</resources>